# disc-site

./: .gitignore  Architecture.drawio  LICENSE  LOCAL_SETUP.md  README.md  Untitled Diagram.drawio  app.Dockerfile  breba_app.Dockerfile  build_and_deploy_breba_app.sh  build_and_deploy_builder_agent.sh  build_and_deploy_generator_agent.sh  builder_agent.Dockerfile  chat_agent.Dockerfile  docker-compose.yaml  generator_agent.Dockerfile  main.py  output_agent.Dockerfile  pyproject.toml  requirements.txt  start.bash  test_mcp.py
act_agent/: .env  README.md  agent.py  main.py  sample.env  user_functions.py
breba_app/: __main__.py  agent_model.py  auth.py  build_and_deploy_breba_app.sh  chainlit.md  config.py  deployment_controller.py  diff.py  llm_utils.py  main.py  main_dev.py  my_cl_app.py  orchestrator.py  paths.py  requirements.txt  sample.env  search_replace_editing.py  status_service.py  steps_utils.py  storage.py  ui_bus.py  website.py
builder_agent/: README.md  agent.py  main.py  start.sh  subscribe_to_pubsub.py  task_manager.py
chat_agent/: README.md  requirements.txt
common/: client.py  constants.py  google_pub_sub.py  mock_server.py  model.py  storage.py  utils.py
evals/: loader.py  run.py  test_eval_coder_agent.py  test_eval_orchestrator.py
generator_agent/: Dockerfile  README.md  requirements.txt  start.sh  subscribe_to_pubsub.py
images/: Architecture.drawio  Communication_flow.drawio  PubSub Diagram.drawio
mongo-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-16531434330605566075.wt  collection-2-16531434330605566075.wt  collection-4-16531434330605566075.wt  collection-7-16531434330605566075.wt  index-1-16531434330605566075.wt  index-3-16531434330605566075.wt  index-5-16531434330605566075.wt  index-6-16531434330605566075.wt  index-8-16531434330605566075.wt  index-9-16531434330605566075.wt  sizeStorer.wt
output_agent/: README.md
pubsub/: Dockerfile  README.md  requirements.txt
scripts/: create_user.bash  create_user.py  dev_setup.bash  install_mongodb.bash  (+1 more)
(+207 files in other folders)
