[project]
name = "disc-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "beanie~=1.30.0",
    "boto3>=1.40.44",
    "chainlit==2.8.0",
    "fastapi==0.116.2",
    "google-cloud-storage>=3.1.0",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "langchain-community==0.3.27",
    "langchain-core==0.3.66",
    "langchain-mcp-adapters~=0.1.9",
    "langchain-openai==0.3.13",
    "langgraph==0.3.29",
    "mcp~=1.11.0",
    "motor~=3.7.1",
    "openai==1.82.0",
    "passlib[bcrypt]>=1.7.4",
    "protobuf~=5.29.5",
    "pydantic==2.11.3",
    "python-dotenv==1.1.0",
    "starlette==0.47.2",
    "typing-extensions>=4.14.0",
    "uvicorn[standard]==0.35.0",
]

[tool.poetry]
packages = [
  { include = "breba_app" }
]

[dependency-groups]
dev = [
    "pytest~=8.4.0",
    "pytest-asyncio~=1.0.0",
    "unidiff>=0.7.5",
]

